syntax = "proto3";
package block;

option go_package = "/proto";
import "proto/poh.proto";
import "proto/accountState.proto";
import "proto/receipt.proto";


message BlockHashData {
    bytes Count = 1;
    bytes LastEntryHash = 2;
    bytes AccountStateRoot = 3;
}

message Block {
    bytes Hash = 1;
    bytes Count = 2;
    poh.PohEntry LastEntry = 3;
    bytes AccountStateRoot = 4;
    int64 TimeStamp = 5;
}

message FullBlock {
    Block Block = 1;
    repeated accountState.AccountState AccountStates = 2;
    repeated receipt.Receipt Receipts = 3;
}